--- a/todo/index.html
+++ b/todo/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add,close_small" />
+
+        
+    </head>
+
 <body>
-    todo app 
+    <div class="todo-container">
+        <h1>Your To Do</h1>
+        <form id="todo-form">
+            <input type="text" id="todo-input" placeholder="กรอกสิ่งที่ต้องทำ">
+            <button  id="add-todo" ><span class="material-symbols-outlined"> add
+                </span></button>
+        </form>
+        <ul id="todo-list">
+            
+        </ul>
+        <div class="footer">Your remaining todos: <span id="remaining-count">0</span></div>
+    </div>
+
+<script src="app.js" ></script>
 </body>
+
 </html>
