--- a/resume/index.html
+++ b/resume/index.html
@@ -212,7 +212,6 @@
               <ul class="list-disc list-inside text-gray-700 text-sm space-y-1">
                 <li>Support ระบบไอทีในโรงงาน</li>
                 <li>แก้ไขปัญหา Hardware และ Network</li>
-                <li>ดูแลผู้ใช้งานกว่า 500 คน</li>
               </ul>
             </div>
             <div
@@ -247,7 +246,24 @@
             </div>
           </div>
         </section>
-
+<section class="fade-in">
+          <h2
+            class="text-2xl font-semibold text-blue-700 tracking-wide border-b border-gray-300 pb-2 mb-6"
+          >
+            Additional Experience
+          </h2>
+          <div class="border-l-4 border-blue-600 pl-6 relative">
+            <div
+              class="relative before:absolute before:left-[-16px] before:top-1 before:w-4 before:h-4 before:bg-blue-600 before:rounded-full before:border-2 before:border-white"
+            >
+              <h3 class="font-semibold text-gray-900">
+                Databases: SQL Server, MySQL, Oracle, DB2, Sybase <br>
+                Programming: VB.NET, C#.NET, Java 4.0 Cert., VBA
+              </h3>
+              <p class="italic text-gray-600 text-sm">2002 - 2007</p>
+            </div>
+          </div>
+        </section>
         <section class="fade-in">
           <h2
             class="text-2xl font-semibold text-blue-700 tracking-wide border-b border-gray-300 pb-2 mb-6"
@@ -259,7 +275,7 @@
               class="relative before:absolute before:left-[-16px] before:top-1 before:w-4 before:h-4 before:bg-blue-600 before:rounded-full before:border-2 before:border-white"
             >
               <h3 class="font-semibold text-gray-900">
-                ปริญญาตรี เอกระบบสารสนเทศเพื่อการจัดการ
+                ปริญญาตรี สาขาวิชาระบบสารสนเทศเพื่อการจัดการ
               </h3>
               <p class="italic text-gray-600 text-sm">2002 - 2006</p>
             </div>
