--- a/resume/index.html
+++ b/resume/index.html
@@ -99,7 +99,7 @@
       <!-- Left column -->
       <div class="left-bg md:w-1/3 p-8 flex flex-col items-center space-y-8">
         <img
-          src="https://scontent.fbkk15-1.fna.fbcdn.net/v/t39.30808-1/421388132_25564725066460436_2508212009789458830_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=106&ccb=1-7&_nc_sid=1d2534&_nc_eui2=AeF3Hkxr8guEjdbsQVAqM9UXgnHZDDeHJQuCcdkMN4clC4t0XnXjfAHuZV9kAXjUBitlz4aULCSJHacKOpEioFUW&_nc_ohc=TXiuoBO1LQUQ7kNvwH7X3AI&_nc_oc=Adn0vVD4psSPaLGFHx94gwUAyjHz_XwbvTVmQvXVAcYSUL3892slFoaa-Mmd1rYzgkA&_nc_zt=24&_nc_ht=scontent.fbkk15-1.fna&_nc_gid=J5nYKJ-3pwJ3s7roi23wIQ&oh=00_AfMNp4xS6IKVaconEJtB_Va5-8xwbkOi6CTIjt8BY17STA&oe=68682C9B"
+          src="boonyadol_morruchai.jpg"
           alt="Profile"
           class="rounded-full border-4 border-blue-600 w-36 h-36 object-cover"
         />
